# EMNA-AI-CHAT-BOT

./: .env  .gitattributes  .gitignore  ASYNC_SETUP_GUIDE.md  README.md  SQL_SERVER_WAREHOUSE_SETUP.md  get_tables name.sql  main.py  pyproject.toml
core/: config.py
core/database/: async_db.py  sync_db.py
core/database/models/: models.py
llms/: models.py
rh_agent/: graph.py
rh_agent/utils/: agent.py  contexts.py  nodes.py  routes.py  states.py
