[project]
name = "emna-ai-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "langchain>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "ollama>=0.6.1",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.56.0",
]
